# dascasi

./: .appveyor.yml  .gitignore  .travis.yml  CITATION  ConvertDASC_FITS_to_HDF5.py  DownloadDASC.py  MANIFEST.in  PlayMovie.py  PlotDASC.py  PlotDASCPixels.py  PlotDASC_HiST.py  PlotProjectedImage.py  README.md  README.rst  contributors.md  dasc_hist.py  downloadDASC.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml
Notebooks/: Azimuth Elevation Plot.ipynb
cal/: PKR_20111006_AZ_10deg.FITS  PKR_20111006_EL_10deg.FITS
dascutils/: __init__.py  common.py  hdf5.py  io.py  plotdasc.py  plots.py  processing.py  projection.py  readDASCfits.py  utils.py  web.py
dascutils/tests/: test_download.py
scripts/: ConvertDASC_FITS_to_HDF5.py  PlotAzimuthElevation.py  PlotImageAzEl.py  PlotProjectedImage.py  dasc_hist.py
src/dascasi/: __init__.py  io.py  plots.py  projection.py  utils.py
src/dascasi/tests/: test_download.py  test_mod.py  test_projection.py
src/dascasi/tests/data/: PKR_DASC_0558_20151007_082404.243.FITS
src/dascutils/: __init__.py  __main__.py  download.py  hdf5.py  io.py  movie.py  plots.py  projection.py  utils.py  web.py
src/dascutils/tests/: test_download.py  test_mod.py  test_projection.py
src/dascutils/tests/data/cal/: PKR_DASC_0558_20150213_Az.FIT  PKR_DASC_0558_20150213_El.FIT
tests/: PKR_DASC_0428_20151007_082305.930.FITS  PKR_DASC_0428_20151007_082355.961.FITS  PKR_DASC_0558_20151007_082351.743.FITS  PKR_DASC_0630_20151007_082359.586.FITS  test.py  test_all.py  test_download.py  test_mod.py  test_projection.py
