[metadata]
name = dascutils
version = 2.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/dascutils
description = Utilities for UAF Digital All-Sky Camera: reading and plotting
keywords =
  aurora
  scientific camera
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
scripts =
  DownloadDASC.py
  PlayMovie.py
  ConvertDASC_FITS_to_HDF5.py
install_requires =
  python-dateutil
  numpy >= 1.13
  astropy
  xarray >= 0.11
  scipy>=0.9
  pymap3d>=1.7.11
  h5py

[options.extras_require]
tests =
  pytest >= 3.9
  pytest-cov
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
full =
  scikit-image
  matplotlib
  themisasi
