[metadata]
name = dascutils
version = 2.2.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/dascasi
description = Utilities for UAF Digital All-Sky Camera: reading and plotting
keywords =
  aurora
  scientific camera
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True
install_requires =
  python-dateutil
  numpy >= 1.13
  astropy  # FITS file IO
  xarray >= 0.11  # arrays with metadata
  scipy >= 0.9  # data processing
  pymap3d >= 1.7.11  # camera image projection to altitude
  h5py  # data file IO
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest >= 3.9
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
  types-python-dateutil
full =
  cartopy
  scikit-image
  matplotlib
  themisasi

[options.entry_points]
console_scripts =
  dascasi_download = dascutils.__main__:dascasi_download
  dascasi_movie = dascutils.__main__:dascasi_movie
